"import packages/Use packages"

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8000
 # MongoDB Connection
 MONGO_URI=mongodb+srv://taimoor_hashim:taimoor123@taimorhashim.xvrdlgm.mongodb.net/VideoTube
+# CORS Configuration
+# for all requests accepted from this origin we can also use * (cors_origin =*) to allow all origins but it is not recommended for production
+CORS_ORIGIN=http://localhost:8000
